...
    COUNT(
        selectedIcon = Icons.Filled.QrCodeScanner,
        unselectedIcon = Icons.Outlined.QrCodeScanner,
        iconTextId = R.string.nav_count,
        titleTextId = R.string.count_title,
        route = "count",
        testTag = "nav_count"
    ),
    ACTIVITY(
        selectedIcon = Icons.Filled.History,
        unselectedIcon = Icons.Outlined.History,
        iconTextId = R.string.nav_activity,
        titleTextId = R.string.activity_title,
...
